unb-gama/style.css
/* ... */
.search-results-articles.search-results-box {
  margin-bottom: 10px;
}

.pagination {
  font-size: 15px;
}

.controller-search a {
  color: #336699;
}

#content #article .pagination .previous_page {
  float: left;
}

#box-2 {
  margin: 10px 0px 0px 10px !important;
}

#content-inner > div > div > div > div > div.search-form {
  margin: 10px 10px 10px 10px;
}

#search-content {
  margin: 10px 10px 10px 10px;
}

#box-184 > div {
  width: 737px;
}

#block-3003 > div > div {
  padding-left: 17px;
}

#language-chooser {
  display: none;
}

#info > li > a {
  color: #005263;
  font-weight: normal;
}

#info {
  width: 113px;
}

#profile-down ul.visible {
  display: block;
}


#navigation ul a {
  border: none;
}

#navigation ul a:hover {
  background: none;
  border: none;
}

#profile-button {
  width: 125px;
  background-color: #009B37;
  height: 33px;
  border-radius: 6px;
  border-bottom: 4px solid #146543;
  cursor: pointer;
}

#profile-button.pressed {
  background-color: #00814d;
  border-bottom: 2px solid #0d4a30;
  margin-top: 2px;
}

#profile-button a {
  text-decoration: none;
  color: #FFFFFF;
  font-weight: 900;
  line-height: 33px;
}

#profile-button.pressed a {
  font-size: 12px;
  line-height: 34px;
}

#profile-button .fa {
  margin-right: 5px;
  font-size: 16px;
}

#profile-button.pressed .fa {
  font-size: 15px;
}

.home-link:before {
  background: url(images/search.png) no-repeat scroll 200px 6px;
}

#box-3 > div:nth-child(1) > div:nth-child(1) {
  margin-left: -1%;
}

#profile-dropdown {
  display: none;
  background: #00814d;
  float: right;
  border-radius: 5px;
  position: relative;
  border: 4px solid #00814d;
}

#profile-dropdown:after, #profile-dropdown:before {
  bottom: 100%;
  left: 95%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

#profile-dropdown:after {
  border-color: rgba(0, 155, 55, 0);
  border-bottom-color: #00814d;
  border-width: 4px;
  margin-left: -4px;
}
#profile-dropdown:before {
  border-color: rgba(0, 155, 55, 0);
  border-bottom-color: #00814d;
  border-width: 10px;
  margin-left: -10px;
}

#profile-dropdown.visible {
  display: block;
}

#profile-dropdown a {
  border-left: none;
}

#profile-dropdown #profile-logged-out {
  padding: 5px 15px;
  min-width: 240px;
}

#profile-dropdown #profile-logged-in {
  padding: 5px 5px 3px;
  min-width: 200px;
}

#profile-dropdown #user-name {
  display: block;
  color: white;
  margin-bottom: 10px;
}

#profile-dropdown #profile-logged-in #logged-options {
  list-style: none;
  padding-left: 0px;
  margin: 0;
}


#profile-dropdown #profile-logged-in #logged-options li {
  background: #009B37;
  padding-bottom: 0px;
  min-width: 190px;
  border-radius: 5px;
  margin: 0px 0px 2px 0px;
  height: 30px;
}

#profile-dropdown #profile-logged-in #logged-options li a {
  color: white;
  text-decoration: none;
  line-height: 30px;
  display: block;
}

.footer-division-title {
  text-transform: uppercase;
}

#footer-content .footer-list {
  margin-top: 20px;
}

#profile-header-fga {
  max-height: 217px;
  text-align: center;
  margin-top: 45px;
  margin-left: 5%;
  width: 125px;
}

#profile-header-actions {
  max-width: 125px;
}


#header-login input {
  display: inline;
  border-radius: 4px;
  width: 110px;
  height: 20px;
}

#header-login input::-webkit-input-placeholder {
  text-align: center;
  font-weight: 900;
  text-transform: lowercase;
  color: #CECECE;
}

.profile-buttons input {
  float: right;
  padding: 20px !important;
  margin: 10px;
  margin-right: 0px;
  text-transform: UPPERCASE;
  background-color: #005D34 !important;
  line-height: 2px !important;
  color: white !important;
  font-weight: 900 !important;
  border: none !important;
  border-bottom: 5px solid #003A19 !important;
}

.profile-buttons input:hover {
  color: #009B37 !important;
  border-bottom: 5px solid #003A19 !important;
}

#theme-header .signup-form {
  padding-top: 5px;
}

#theme-header .signup-form a {
  text-decoration: none;
  font-size: 13px;
  color: #7b7b7b;
}

#theme-header .signup-form a:hover {
  text-decoration: underline;
}

#navigation ul #home-button {
  margin-right: 80px;
}

#navigation ul #home-button span {
  padding: 0 5px 0 0;
  color: #00D869;
}

#navigation ul #home-button a {
  line-height: 65px;
  display: block;
}

#navigation ul li #news,
#navigation ul li #pos-graduation,
#navigation ul li #labs,
#navigation ul li #info,
#navigation ul li #learn-more,
#navigation ul li #startups {
  margin-top: 15px;
  z-index: 10;
}

.navigation-dropdown-list li a {
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
}

#pos-graduation.navigation-dropdown-list,
#info.navigation-dropdown-list,
#labs.navigation-dropdown-list,
#news.navigation-dropdown-list,
#learn-more.navigation-dropdown-list,
#startups.navigation-dropdown-list,
#info.navigation-dropdown-list {
  background: #00814D;
  min-width: 200px;
  margin-left: 0px;
  border-radius: 5px;
  border: 0px;
  padding-top: 5px;
}

#pos-graduation.navigation-dropdown-list li,
#info.navigation-dropdown-list li,
#labs.navigation-dropdown-list li,
#news.navigation-dropdown-list li,
#learn-more.navigation-dropdown-list li,
#startups.navigation-dropdown-list li,
#info.navigation-dropdown-list li{
  background: #009B37;
  padding-bottom: 0px;
  margin-left: 5px;
  margin-right: 5px;
  min-width: 190px;
  border-radius: 5px;
}

#pos-graduation.navigation-dropdown-list li a,
#info.navigation-dropdown-list li a,
#labs.navigation-dropdown-list li a,
#news.navigation-dropdown-list li a,
#learn-more.navigation-dropdown-list li a,
#startups.navigation-dropdown-list li a,
#info.navigation-dropdown-list li a{
  color: white;
}

#profile-menu-dropdown {
  display: flex;
  align-items: center;
  margin-right: 9px;
  justify-content: flex-end;
}

#profile-menu-dropdown img {
  border-radius: 100%;
  height: 50px;
}

#profile-menu-dropdown .fa.fa-angle-down {
  padding-left: 5%;
  font-size: 2em;
}
/* ... */

